@@ -10,18 +10,18 @@ DIST jdk-6u1-ea-bin-b02-linux-amd64-12_jan_2007.bin 56250884 RMD160 305ea9a5a48f
 DIST jdk-6u1-ea-bin-b02-linux-i586-12_jan_2007.bin 62676957 RMD160 b2725943ba346ec6050f27e061a6f68ca3a01877 SHA1 111b5971a4f4b4c5612636a92f7d65ca3d50a606 SHA256 bac2dfd022f7dbc16d1e2b48412b895e06138c1641f3c0c84b10c2d8b5eb075a
 DIST jdk-7-ea-bin-b05-linux-amd64-04_jan_2007.bin 56290207 RMD160 cd1d0882470c67204c06e233f795a45b71dfa668 SHA1 b7ee46c64febee5585e00ddf8e3d443908ade7cb SHA256 616f192d88e412b2adce8fb2cd10cbcaf53f8697d0903a40b9fc65862f960eb3
 DIST jdk-7-ea-bin-b05-linux-i586-04_jan_2007.bin 62637613 RMD160 f76f67fd7ced52fc02f3d84c9d0cc2406f4c33ce SHA1 4207bd452cdf529436a0038c5773a88801167d04 SHA256 91e441ef54f849dce833919d564559b3c11e5626ea85fc614fdde8f5d85829aa
-EBUILD sun-jdk-1.6.0.1_alpha02.ebuild 5324 RMD160 b4b7caadaddf123313b5e46e2e7572e123ac169b SHA1 3e0983084e26ac83662f03a88cafa47c225f3e17 SHA256 361411c269dc95108366616044fadb273a826bd738f1c92153d9d4b86f9cfde0
-MD5 a62b5a22ef18a1f708340d4e86072eb8 sun-jdk-1.6.0.1_alpha02.ebuild 5324
-RMD160 b4b7caadaddf123313b5e46e2e7572e123ac169b sun-jdk-1.6.0.1_alpha02.ebuild 5324
-SHA256 361411c269dc95108366616044fadb273a826bd738f1c92153d9d4b86f9cfde0 sun-jdk-1.6.0.1_alpha02.ebuild 5324
+EBUILD sun-jdk-1.6.0.1_alpha02.ebuild 5298 RMD160 3c9e2e9c665b32a3cb32d03f0295e640c612506a SHA1 ad0923b6be02b9027c7430dc443a6c4e983a43d9 SHA256 6b2548fbc581ffcc0100781b422c82c0e76f2f27d7f73ea98e97e4c50c0ab8ff
+MD5 c2c7971f6cd796bf52748786c105090a sun-jdk-1.6.0.1_alpha02.ebuild 5298
+RMD160 3c9e2e9c665b32a3cb32d03f0295e640c612506a sun-jdk-1.6.0.1_alpha02.ebuild 5298
+SHA256 6b2548fbc581ffcc0100781b422c82c0e76f2f27d7f73ea98e97e4c50c0ab8ff sun-jdk-1.6.0.1_alpha02.ebuild 5298
 EBUILD sun-jdk-1.7.0.0_alpha05.ebuild 5356 RMD160 3c1a1c3b41ba5eeb078a8a7881cac5db0ae44769 SHA1 a0bdc0ef37dc010da205b8210e6875f71c02b883 SHA256 6d21dbd5e0d79813b60ab66decce5d7365e3109dfa46faad4434ad0d8b640cf2
 MD5 e7e4f9e085f023bdfb61c9fb76bac2af sun-jdk-1.7.0.0_alpha05.ebuild 5356
 RMD160 3c1a1c3b41ba5eeb078a8a7881cac5db0ae44769 sun-jdk-1.7.0.0_alpha05.ebuild 5356
 SHA256 6d21dbd5e0d79813b60ab66decce5d7365e3109dfa46faad4434ad0d8b640cf2 sun-jdk-1.7.0.0_alpha05.ebuild 5356
-MISC ChangeLog 2271 RMD160 2a17035f499d697cf25c081d1d3c6604e653f925 SHA1 d5914800b2524f309705474f870c75cc662aa7e3 SHA256 32ada27eea552e1ef4bb2d7f3fb17178b13b3125788e86529c8fa4643e08eeeb
-MD5 febfaa889ed40964d9d5479d7f473245 ChangeLog 2271
-RMD160 2a17035f499d697cf25c081d1d3c6604e653f925 ChangeLog 2271
-SHA256 32ada27eea552e1ef4bb2d7f3fb17178b13b3125788e86529c8fa4643e08eeeb ChangeLog 2271
+MISC ChangeLog 2370 RMD160 66e1b4a20afde66f25813268b5c2a1bcb8bdd97e SHA1 612bb5ded2e02e2c6d92cd978dfb0e8cc2907fcf SHA256 ba6d709798bcfab681bdcb1d735bd9a52332c977d7a078cd00e805cab7eacfca
+MD5 45368f04c3dbc4fd9c096f0e786930b2 ChangeLog 2370
+RMD160 66e1b4a20afde66f25813268b5c2a1bcb8bdd97e ChangeLog 2370
+SHA256 ba6d709798bcfab681bdcb1d735bd9a52332c977d7a078cd00e805cab7eacfca ChangeLog 2370
 MD5 deb12e73995355f86ae26d4bd9d4159c files/digest-sun-jdk-1.6.0.1_alpha02 647
 RMD160 79e5126ca0308fd0a41c6c4af002027251e7b852 files/digest-sun-jdk-1.6.0.1_alpha02 647
 SHA256 cc96631760da7d92d307a259153275e1fb889107d0568a9d9c8649dcc73cb0ee files/digest-sun-jdk-1.6.0.1_alpha02 647
