@@ -3,6 +3,10 @@
 # $Header: $
 
   16 Jan 2007; Vlastimil Babka <caster@gentoo.org>
+  sun-jdk-1.6.0.1_alpha02.ebuild:
+  Fix unpack
+
+  16 Jan 2007; Vlastimil Babka <caster@gentoo.org>
   -sun-jdk-1.6.0.1_alpha01.ebuild, +sun-jdk-1.6.0.1_alpha02.ebuild:
   Bump to new snapshot.
 
